--- a/index.html
+++ b/index.html
@@ -4,22 +4,29 @@
 		<title>Chinese Workshop Flipcard</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-	<link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="msapplication-config" content="images/browserconfig.xml">
-	<meta name="theme-color" content="#ffffff">
+		<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+		<link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="images/favicon.ico">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-config" content="images/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
 		<link href="css/index2.css" rel="stylesheet" type="text/css">
 		<link href="css/preloader.css" rel="stylesheet" type="text/css">
+		<!-- 加载hsk1.js到hsk12.js文件 -->
 		<script type="text/javascript" src='hsk/hsk1.js'></script>
 		<script type="text/javascript" src='hsk/hsk2.js'></script>
 		<script type="text/javascript" src='hsk/hsk3.js'></script>
 		<script type="text/javascript" src='hsk/hsk4.js'></script>
 		<script type="text/javascript" src='hsk/hsk5.js'></script>
 		<script type="text/javascript" src='hsk/hsk6.js'></script>
+		<script type="text/javascript" src='hsk/hsk7.js'></script>
+		<script type="text/javascript" src='hsk/hsk8.js'></script>
+		<script type="text/javascript" src='hsk/hsk9.js'></script>
+		<script type="text/javascript" src='hsk/hsk10.js'></script>
+		<script type="text/javascript" src='hsk/hsk11.js'></script>
+		<script type="text/javascript" src='hsk/hsk12.js'></script>
 		<link rel="manifest" href="manifest.json">
 		<script type="text/javascript">
 			if ('serviceWorker' in navigator) {
@@ -27,9 +34,7 @@
 			}
 		</script>
 		<script type="text/javascript">
-			//https://github.com/ReubenBond/HanBaoBao/blob/master/DictionaryDbBuilder/Hsk/HskHskCom/2.txt
-			//http://www.blueraja.com/blog/477/a-better-spaced-repetition-learning-algorithm-sm2
-			setTimeout(writePage, 14);
+			setTimeout(showPage, 14);
 			function showPage() {
 				document.getElementById("loader").style.visibility = "hidden";
 				document.getElementById("loader").style.opacity = 0;
@@ -45,14 +50,15 @@
 			let cardSets = new Set();
 			
 			let tts; // tts
-			let hskPopup, checkBox, elvl, hskButton; // page 1 header
+			let lessonPopup, checkBox, elvl, lessonButton; // page 1 header
 			let cardDiv, studyBtn, refreshCards, studyIndex = 0; // page 1 main
 			let studyPopup, eflip, eback, bigCard, frontCard, backCard, progress, studyResults, resultButton, pinyinToggle, canFlip = true; //study screen
 			let srsBtn, srsPopup, ebackSrs, srsFrontCard, srsBackCard, srsProgress, srsPinyinToggle, srsIndex = 0, weightedCardSet = []; // srs screen
 			let infoPopup, infoCanShow = true; // page 2 srs
 			let foundUpdate = false, settingsBtn, creditBtn, checkUpdateBtn, settingsCloseBtn, settingsLoadBtn, settingsResetBtn, creditCloseBtn, settingsPopup, creditPopup, chineseAlpha, textarea, resetPopup, resetCloseBtn, resetConfirmBtn; // page 2 settings
 			let lwp, lwhsk, listWords; // page 3 list learned words
-			// Onload DOM and Event setups. Also calls some functions to initialize the app.
+			
+			// Onload DOM and Event setups
 			window.addEventListener('load', function() {
 				home = document.getElementById('home');
 				test = document.getElementById('test');
@@ -85,15 +91,15 @@
 				for (let i = 0; i < checkBox.length; i++) {
 					checkBox[i].onchange = () => getCategory(checkBox,elvl);
 				}
-				hskPopup = document.getElementById("hskPopup");
+				lessonPopup = document.getElementById("lessonPopup");
 				elvl = document.getElementById('elvl');
 				elvl.onclick = () => {
-					openClose(true,hskPopup);
+					openClose(true,lessonPopup);
 					window.history.pushState({page:'home',popup:1}, 'home');
 				}
-				hskButton = document.getElementById('hskButton');
-				hskButton.onclick = () => {
-					openClose(false,hskPopup);
+				lessonButton = document.getElementById('lessonButton');
+				lessonButton.onclick = () => {
+					openClose(false,lessonPopup);
 					init();
 					window.history.back();
 				};
@@ -167,7 +173,7 @@
 				creditCloseBtn = document.getElementById("creditCloseBtn");
 				settingsBtn.onclick = () => {
 					openClose(true, settingsPopup);
-					textarea.value = utoa(localStorage.hskFlipCard);
+					textarea.value = utoa(localStorage.chineseWorkshopFlipCard);
 					window.history.pushState({page:'test',popup:2}, 'test');
 				}
 				settingsLoadBtn.onclick = () => loadProgress();
@@ -233,7 +239,7 @@
 				lwp = document.getElementsByClassName('lwp');
 				for (p of lwp) {
 					p.onclick = function() {
-						lwhsk[+this.innerText.substring(3)-1].classList.toggle("lwshow");
+						lwhsk[+this.innerText.substring(6)-1].classList.toggle("lwshow");
 						this.classList.toggle("lwshow");
 					}
 				}
@@ -241,13 +247,13 @@
 				// initialization
 				init();
 			});
+
 			function init() {
 				getCategory(checkBox,elvl);
 				cardSets = getCards(dictCards,9);
 				addCards(cardSets, cardDiv);
-				//studyBtn.click();
-				//srsBtn.click();
 			}
+
 			function updateLearnedWords(wordList) {
 				document.getElementById('wordsLearned').innerHTML = "Words learned so far: "+wordList.length;
 				for (hsk of lwhsk) {
@@ -256,18 +262,17 @@
 				for (const word of wordList) {
 					const card = document.createElement('div');
 					card.innerHTML = `<span>${chineseAlpha.value=='simplified'?word.simplified:word.traditional}</span> <span>${word.pinyin}</span> <span>${word.eng}</span>`;
-					lwhsk[+word.hsk-1].appendChild(card);
+					lwhsk[+word.lesson-1].appendChild(card);
 				}
 			}
+
 			function addToLearnedWords(set, correct) {
 				for (let i=0; i<set.length; i++) {
 					const cardNum = set[i];
 					const card = dictCards[cardNum];
 					if (!learnedWords.includes(card)) {
-						card.difficulty = card.hsk*0.1 + 0.3;
-						card.difficulty += correct[i] == 1 ? -0.1 : 0.1; // difficulty increase if not correct on study
-						// set time to yesterday so srs can run
-						// 1 day = 86399462
+						card.difficulty = card.lesson*0.1 + 0.3;
+						card.difficulty += correct[i] == 1 ? -0.1 : 0.1;
 						card.daysBetweenReview = 3;
 						card.date = new Date(new Date().getTime()-(0*86399462)).toJSON();
 						learnedWords.push(card);
@@ -275,20 +280,21 @@
 				}
 				setLocalStorage(JSON.stringify(learnedWords));
 			}
+
 			function setLocalStorage(str) {
-				localStorage.setItem('hskFlipCard',str)
+				localStorage.setItem('chineseWorkshopFlipCard',str)
 			}
+
 			function checkLocalStorage() {
-				// If first time / no localstorage found
-				if (localStorage.getItem('hskFlipCard') == null) {
-					localStorage.setItem('hskFlipCard','[]')
+				if (localStorage.getItem('chineseWorkshopFlipCard') == null) {
+					localStorage.setItem('chineseWorkshopFlipCard','[]')
 				}
-				// else load learned words
-				const data = JSON.parse(localStorage.getItem("hskFlipCard"));
+				const data = JSON.parse(localStorage.getItem("chineseWorkshopFlipCard"));
 				for (const card of data) {
 					learnedWords.push(card);
 				}
 			}
+
 			// TTS
 			function setTTS(word) {
 				const a = `https://texttospeech.responsivevoice.org/v1/text:synthesize?text=${encodeURIComponent(word)}&lang=zh-CN&engine=g1&name=&pitch=0.5&rate=0.5&volume=1&key=PL3QYYuV&gender=female`;
@@ -298,9 +304,10 @@
 				setTTS(word);
 				tts.play();
 			}
+
 			// Settings
 			function resetProgress() {
-				localStorage.removeItem("hskFlipCard");
+				localStorage.removeItem("chineseWorkshopFlipCard");
 				location.reload();
 			}
 			function loadProgress() {
@@ -319,7 +326,7 @@
 				}
 			}
 			function checkValidProgress(progress) {
-				const keys = ["date", "daysBetweenReview", "difficulty", "eng", "hsk", "pinyin", "simplified", "traditional"];
+				const keys = ["date", "daysBetweenReview", "difficulty", "eng", "lesson", "pinyin", "simplified", "traditional"];
 				for (let i=0; i<progress.length; i++) {
 					const word = progress[i];
 					const key = Object.keys(word).sort();
@@ -339,6 +346,7 @@
 				}
 				return true;
 			}
+
 			// SRS
 			function runSRS() {
 				if (weightedCardSet.length > 0) {
@@ -346,7 +354,6 @@
 					srsProgress.value = 0;
 					srsProgress.max = weightedCardSet.length;
 					getSRSCard(weightedCardSet,srsFrontCard,srsBackCard);
-					//console.log(weightedCardSet);
 					openClose(true,srsPopup);
 				} else {
 					showInfoPopup("No words to study for today!");
@@ -376,7 +383,6 @@
 				const cards = [];
 				const timeNow = new Date().getTime();
 				for (let i=0; i<set.length; i++) {
-					// check date not today first
 					if (timeNow-new Date(set[i].date).getTime() >= set[i].daysBetweenReview*86399462) {
 						cards.push(i);
 					}
@@ -393,7 +399,6 @@
 					return;
 				}
 				const timeNow = new Date().getTime();
-				// get card, display card
 				const cardNum = set[srsIndex];
 				const card = learnedWords[cardNum];
 				front.innerHTML = `
@@ -454,6 +459,7 @@
 					chooseBtnWrapper.appendChild(choiceBtn);
 				}
 			}
+
 			// Study
 			function study() {
 				openClose(true,studyPopup);
@@ -502,8 +508,6 @@
 					},500);
 					return;
 				}
-				//console.log(set);
-				// get card, display card
 				const cardNum = set[studyIndex];
 				const card = dictCards[cardNum];
 				front.innerHTML = `
@@ -515,7 +519,6 @@
 					<p>${card.eng}</p>
 				`;
 				checkPinyin();
-				// get 3 answer options
 				let options = shuffle(set);
 				options.length = 3;
 				if (!options.includes(cardNum)) {
@@ -562,7 +565,8 @@
 					optionBtnWrapper.appendChild(answerBtn);
 				}
 			}
-			// Main menu function to give onclick event. CSS animation to flip card.
+
+			// Main menu functions
 			function getMainCardData() {
 				const allCards = document.getElementsByClassName('cards');
 				for (let i = 0; i < allCards.length; i++) {
@@ -590,7 +594,8 @@
 				}
 				getMainCardData();
 			}
-			// Custom logic functions for returning certain logical things.
+
+			// Utility functions
 			function randint(min, max) {
 				return Math.floor(Math.random() * (max - min + 1) ) + min;
 			}
@@ -600,11 +605,9 @@
 			function clampNumber(num, a, b) {
 				return Math.max(Math.min(num, Math.max(a, b)), Math.min(a, b));
 			}
-			// Encode base64
 			function utoa(str) {
 				return window.btoa(unescape(encodeURIComponent(str)));
 			}
-			// Decode base64
 			function atou(str) {
 				return decodeURIComponent(escape(window.atob(str)));
 			}
@@ -621,7 +624,7 @@
 					if (!force) window.history.replaceState({page:'home'},'home');
 					document.getElementById(`page${meny.name}`).style.display = 'flex';
 					document.getElementById("bodyWrapper").children[0].style.display = 'block';
-					openClose(false,hskPopup);
+					openClose(false,lessonPopup);
 					openClose(false,studyPopup);
 				} else if (meny.name == 2) {
 					if (!force) window.history.replaceState({page:'test'},'test');
@@ -635,44 +638,42 @@
 				}
 				document.getElementById(`page${meny.name}`).style.display = 'block';
 			}
-			// Custom function for toggling CSS animations after a given time.
 			function toggleAnimate(dom,animateName,time=1400) {
 				dom.classList.toggle(animateName);
 				setTimeout(() =>{
 					dom.classList.toggle(animateName);
 				},time);
 			}
-			// Function to choose which Lesson, display as text too.
+
+			// 获取Lesson数据
 			function getCategory(arrDom,output) {
 				elvl.innerHTML = 'Chinese Workshop';
 				dictCards = [];
 				for (let i = 0; i < arrDom.length; i++) {
 					if (arrDom[i].checked) {
 						let value = arrDom[i].value;
-						elvl.innerHTML += `-${value}`;
-						// Map Lesson1-12 to hsk1-6
-						let hskValue = Math.min(i + 1, 6); // Limit to 6 HSK levels
-						let dict = eval(`hsk${hskValue}`);
-						for (let j = 0; j < dict.length; j++) {
-							let entry = dict[j].split("\t");
+						elvl.innerHTML += `-Lesson${value}`;
+						let dict = eval(`hsk${value}`);
+						for (let i = 0; i < dict.length; i++) {
+							let entry = dict[i].split("\t");
 							let eng = entry.splice(4,entry.length).join(' ');
-							dictCards.push({simplified: entry[0], traditional: entry[1], pinyin: entry[3], eng: eng, hsk: hskValue.toString()});
+							dictCards.push({simplified: entry[0], traditional: entry[1], pinyin: entry[3], eng: eng, lesson: value});
 						}
 					}
 				}
 				if (dictCards.length == 0) {
 					arrDom[0].checked = true;
-					elvl.innerHTML += `-${arrDom[0].value}`;
-					let hskValue = 1; // Default to hsk1
+					elvl.innerHTML += `-Lesson${arrDom[0].value}`;
 					let dict = hsk1;
-					for (let j = 0; j < dict.length; j++) {
-						let entry = dict[j].split(' ');
+					for (let i = 0; i < dict.length; i++) {
+						let entry = dict[i].split("\t");
 						let eng = entry.splice(4,entry.length).join(' ');
-						dictCards.push({simplified: entry[0], traditional: entry[1], pinyin: entry[3], eng: eng, hsk: hskValue.toString()});
+						dictCards.push({simplified: entry[0], traditional: entry[1], pinyin: entry[3], eng: eng, lesson: arrDom[0].value});
 					}
 				}
 			}
-			// Get unique cards from dictCards
+
+			// 获取随机卡片
 			function getCards(list,n,index=true) {
 				let set = new Set();
 				while (set.size < n) {
@@ -682,16 +683,14 @@
 						set.add(list[randint(0,list.length-1)])
 					}
 				}
-				set = Array.from(set);
-				console.log(set);
-				return set;
+				return Array.from(set);
 			}
-			// Custom function to open/close popups.
+
+			// 打开/关闭Popup
 			function openClose(bool,dom,animateType=1) {
 				if (bool) {
 					dom.style.visibility = 'visible';
 					dom.style.opacity = '1';
-
 					if (animateType !== 0) {
 						for (let i = 0; i < dom.childElementCount; i++) {
 							toggleAnimate(dom.children[i],`animate-${animateType}`);
@@ -707,7 +706,6 @@
 	<body>
 		<div id="loader">
 			<div id="audio"></div>
-			<!-- <div id="preloader" preload></div> -->
 			<div class="spinner" preload></div>
 		</div>
 		<div id="bodyWrapper">
@@ -748,12 +746,18 @@
 				<div id="page3">
 					<h3 id="wordsLearned">Words Learned:</h3>
 					<div id="listWords">
-						<div><p class="lwp">HSK1</p><div class="lwhsk"></div></div>
-						<div><p class="lwp">HSK2</p><div class="lwhsk"></div></div>
-						<div><p class="lwp">HSK3</p><div class="lwhsk"></div></div>
-						<div><p class="lwp">HSK4</p><div class="lwhsk"></div></div>
-						<div><p class="lwp">HSK5</p><div class="lwhsk"></div></div>
-						<div><p class="lwp">HSK6</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson1</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson2</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson3</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson4</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson5</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson6</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson7</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson8</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson9</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson10</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson11</p><div class="lwhsk"></div></div>
+						<div><p class="lwp">Lesson12</p><div class="lwhsk"></div></div>
 					</div>
 				</div>
 			</main>
@@ -765,7 +769,7 @@
 			</footer>
 
 			<!-- Lesson Popup -->
-			<div class="popup" id='hskPopup'>
+			<div class="popup" id='lessonPopup'>
 				<div>
 					<h4>Choose Flipcards from lessons</h4>
 					<p><input type="checkbox" name="lesson-1" id="lesson1" value="1" checked><label for="lesson1">Lesson1</label></p>
@@ -782,7 +786,7 @@
 					<p><input type="checkbox" name="lesson-12" id="lesson12" value="12"><label for="lesson12">Lesson12</label></p>
 				</div>
 				<br>
-				<button id="hskButton" class='btn'>Confirm</button>
+				<button id="lessonButton" class='btn'>Confirm</button>
 			</div>
 
 			<!-- Study Flipcards -->
@@ -829,7 +833,7 @@
 				<progress id='progress' value="0" max="9"></progress>
 			</div>
 
-			<!-- Spaced Repetitive Study flipcards -->
+			<!-- SRS Popup -->
 			<div class="popup" id='srsPopup'>
 				<header class="popupHeader">
 					<div>
@@ -887,7 +891,7 @@
 			<div class="popup" id='creditPopup'>
 				<div class="whitebox">
 					<h4>Code and app design by me</h4>
-					<p>HSK Dictionary data provided by <a href="https://github.com/ReubenBond/HanBaoBao" target="_blank">ReubenBond's app HanBaoBao</a></p>
+					<p>Dictionary data provided by [Your Source]</p>
 					<p>Spaced Repetition Learning algorithm (SM2+) provided by <a href="http://www.blueraja.com/blog/477/a-better-spaced-repetition-learning-algorithm-sm2" target="_blank">BlueRaja</a></p>
 					<p>Text-to-speech provided by <a href="https://texttospeech.io/" target="_blank">https://texttospeech.io/</a></p>
 					<p>The project and the datas provided are presented without licences<br/>
@@ -896,7 +900,7 @@
 				</div>
 			</div>
 
-			<!-- reset prompt popup -->
+			<!-- Reset Popup -->
 			<div class="popup" id='resetPopup'>
 				<div class="whitebox">
 					<h4>Do you really want to reset your progress?</h4>
@@ -905,12 +909,12 @@
 				</div>
 			</div>
 			<audio id="tts" src="https://texttospeech.responsivevoice.org/v1/text:synthesize?text=%E7%8B%97&lang=zh-CN&engine=g1&name=&pitch=0.5&rate=0.5&volume=1&key=PL3QYYuV&gender=female"></audio>
-			<!-- info popup -->
+			<!-- Info Popup -->
 			<div class="popup" id='infoPopup'>
 				<div class="whitebox">
 					<h4>Successfully updated learned words!</h4>
 				</div>
 			</div>
 		</div>
-	<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9228d1dc68007451',t:'MTc0MjM0Mzc5Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+	</body>
 </html>
